# craypong

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  release_linux.sh  release_web.sh  release_windows.bat
ressrc/: playerBeep.rfx  wallBeep.rfx
src/: bot.c  bot.h  config.h  game.c  game.h  main.c  types.h  utils.c  utils.h
src/screens/: gameScreen.c  menuScreen.c  pauseScreen.c  pointScreen.c
